<resources>
    <string name="app_name">SafeGuard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="map_api_key">AIzaSyBsEsfTSZAfmD4TLIpvVEY1ziFAn1RNtEI</string>
    <string name="map">Map</string>
    <string name="report">Report</string>
    <string name="info">Info</string>
    <string name="profile">Profile</string>
    <string name="sosbtn">sosbtn</string>
    <string name="your_sos_signal_has_been_sent_to_police">Your SOS signal has been sent to Police !</string>
    <string name="back">back</string>
    <string name="call">CALL</string>
    <string name="deco">deco</string>
    <string name="date_and_time">Date and Time</string>
    <string name="date_time">14 Nov 2023, 22:47 PM</string>
    <string name="current_location">Current Location</string>
    <string name="authorities_in_charge">Authorities In-charge</string>
    <string name="authorities_will_reach_out_to_you_shortly">Authorities will reach out to you shortly.</string>
    <string name="please_remain_in_a_safe_location">Please remain in a safe location.</string>
    <string name="stay_on_the_line_if_possible">Stay on the line if possible.</string>
    <string name="address">45, Jalan SS 2/93, SS 2, 47300 Petaling Jaya, Selangor, Malaysia</string>
    <string name="select_date">Select date</string>
    <string name="report_violence_incident">Report Violence Incident</string>
    <string name="violence_incident_type">Violence Incident Type</string>
    <string name="date">Date</string>
    <string name="select_time">Select time</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="select_location">Select location</string>
    <string name="image">Image</string>
    <string name="describe_the_incident">Describe The Incident</string>
    <string name="briefly_describe_the_incident">Briefly describe the incident</string>
    <string name="submit">Submit</string>
    <string name="image_proof">image proof</string>
    <string name="incident_reporting">Incident Reporting</string>
    <string name="incident_details">Incident Details</string>
    <string name="type">Type</string>
    <string name="description_of_incident">Description of Incident</string>
    <string name="description">Description</string>
    <string name="tracking_report">tracking report</string>
    <string name="authorities">\n</string>
    <string name="make_report">make report</string>
    <string name="press_if_needed">press if needed</string>
    <string name="direct_call_to_police">Direct Call to Police</string>
    <string name="locating">Locating…</string>
    <string name="select_status_prompt">Select Status</string>
    <string name="sos_button_activated">SOS Button Activated</string>
    <string name="todo">TODO</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="sos">SOS</string>
    <string-array name="status_options">
        <item>Choose a status</item>
        <item>Submitted</item>
        <item>In Progress</item>
        <item>Settled</item>
    </string-array>

    <string-array name="incident_types">
        <item>Physical Violence</item>
        <item>Domestic Violence</item>
        <item>Sexual Violence</item>
        <item>Others</item>
    </string-array>

    <string-array name="genderAry">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>